--- a/.github/workflows/docker.yml
+++ b/.github/workflows/docker.yml
@@ -1,13 +1,32 @@
-name: docker image on push
+name: CI - Build and Push Docker Images
 
-on: [push]
+on:
+  push:
+    branches: [ main ]
 
 jobs:
-  build: 
-    runs-on: ubuntu-latest
+  build-and-push:
+    runs-on: ubuntu-latest 
 
     steps:
-    - uses: action/checkout@v2
-    - name: docker build
-      run: |
-        docker-compose build
+      - uses: actions/checkout@v3  
+
+      - name: Login to Docker Hub 
+        uses: docker/login-action@v2
+        with:
+          username: ahmadkarimqureshi
+          password: biosphere123
+
+      - name: Build Node.js image (frontend)
+        run: docker build -t username/nodejs-app ./frontend  
+        working-directory: ./frontend  
+
+      - name: Push Node.js image to Docker Hub (if applicable)
+        run: docker push username/nodejs-app
+
+      - name: Build Django image (replace with your Dockerfile path)
+        run: docker build -t username/django-app .  
+
+      - name: Push Django image to Docker Hub (if applicable)
+        run: docker push username/django-app
+
