--- a/.github/workflows/docker.yml
+++ b/.github/workflows/docker.yml
@@ -1,8 +1,8 @@
 name: CI - Build and Push Docker Images
 
 on:
-  pull_request:
-    branches: [ main ]
+  push:
+    branches: [ akcena14-patch-1 ]
 
 jobs:
   build-and-push:
