--- a/.github/workflows/docker.yml
+++ b/.github/workflows/docker.yml
@@ -1,8 +1,8 @@
 name: CI - Build and Push Docker Images
 
 on:
-  push:
-    branches: [ akcena14-patch-1 ]
+  pull_request:
+    branches: [ main ]
 
 jobs:
   build-and-push:
