--- a/.github/workflows/docker.yml
+++ b/.github/workflows/docker.yml
@@ -18,13 +18,13 @@ jobs:
           password: biosphere123
 
       - name: Build Node.js image (frontend)
-        run: docker build ./frontend  -t username/nodejs-app 
+        run: docker build ./frontend  -t ahmadkarimqureshi/nodejs-app 
 
       - name: Push Node.js image to Docker Hub (if applicable)
         run: docker push ahmadkarimqureshi/nodejs-app
 
       - name: Build Django image (replace with your Dockerfile path)
-        run: docker build ./backend  -t username/django-app 
+        run: docker build ./backend  -t ahmadkarimqureshi/django-app 
 
       - name: Push Django image to Docker Hub (if applicable)
         run: docker push ahmadkarimqureshi/django-app
