--- a/.github/workflows/docker.yml
+++ b/.github/workflows/docker.yml
@@ -14,8 +14,8 @@ jobs:
       - name: Login to Docker Hub 
         uses: docker/login-action@v2
         with:
-          username: ahmadkarimqureshi
-          password: biosphere123
+          username: ${{ secrets.DOCKER_USERNAME }}
+          password: ${{ secrets.DOCKER_PASSWORD }}
 
       - name: Build Node.js image (frontend)
         run: docker build ./frontend  -t ahmadkarimqureshi/nodejs-app 
