--- a/frontend/package.json
+++ b/frontend/package.json
@@ -17,6 +17,7 @@
     "@next/env": "^14.2.3",
     "@react-oauth/google": "^0.12.1",
     "axios": "^1.6.8",
+    "jwt-decode": "^4.0.0",
     "next": "latest",
     "next-auth": "^4.24.7",
     "react": "^18.2.0",
