--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,15 +1,35 @@
 version: "3.8"
 
 services:
+    
   django:
     build: ./backend
     ports:
       - "8000:8000"
+    command: >
+      sh -c "python manage.py makemigrations &&
+             python manage.py migrate &&
+             python manage.py runserver 0.0.0.0:8000"
+
+    
+    depends_on:
+      - db
+  db:
+    image: postgres
+    environment:
+      POSTGRES_PASSWORD: postgres
+      POSTGRES_USER: postgres  
+      POSTGRES_DB: mydatabase
+
+    ports:
+      - "5432:5432"
     
 
   nextjs:
     build: ./frontend
     ports:
       - "3000:3000"
+
+
   
 
