--- a/frontend/package.json
+++ b/frontend/package.json
@@ -13,14 +13,15 @@
     "@mui/material": "^5.15.16",
     "@mui/material-nextjs": "^5.15.11",
     "@mui/styled-engine-sc": "^6.0.0-alpha.18",
-    "express": "^4.19.2",
     "@mui/styles": "^5.15.16",
     "@next/env": "^14.2.3",
     "@react-oauth/google": "^0.12.1",
     "axios": "^1.6.8",
+    "express": "^4.19.2",
     "jwt-decode": "^4.0.0",
     "next": "latest",
     "next-auth": "^4.24.7",
+    "papaparse": "^5.4.1",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "styled-components": "^6.1.9"
