--- a/frontend/package.json
+++ b/frontend/package.json
@@ -18,6 +18,7 @@
     "@react-oauth/google": "^0.12.1",
     "axios": "^1.6.8",
     "express": "^4.19.2",
+    "framer-motion": "^11.1.9",
     "jwt-decode": "^4.0.0",
     "next": "latest",
     "next-auth": "^4.24.7",
